--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/Logo (1).svg" alt="Spot logo" class="header__logo" />
+        <img src="./images/Logo(1).svg" alt="Spot-logo" class="header__logo" />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -26,11 +26,11 @@
             <h1 class="profile__name">Bessi Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/Group 2.svg" alt="pencil icon" />Edit Profile
+              <img src="./images/Group2.svg" alt="pencil-icon" />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-btn">
-            <img src="./images/plus sign BTN.svg" alt="plus icon" />New Post
+            <img src="./images/plus-sign-BTN.svg" alt="plus-icon" />New Post
           </button>
         </section>
         <section class="cards page__section">
@@ -76,7 +76,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">
-                  A very long bridge, over the forest...
+                  A very long bridge, over the forest a beatiful picture
                 </h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
@@ -107,9 +107,7 @@
         </section>
       </main>
       <footer class="footer">
-        <div class="footer__content">
-          <p class="footer__copyright">2023 &copy; Spots</p>
-        </div>
+        <p class="footer__copyright">2023 &copy; Spots</p>
       </footer>
     </div>
   </body>
