--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </footer>
       <div class="modal" id="edit-modal">
         <div class="modal__container">
-          <button type="close" class="modal__close-btn">
+          <button type="button" class="modal__close-btn">
             <img
               src="./images/Group27.svg"
               alt="x-icon"
@@ -62,12 +62,12 @@
           <h2 class="modal__title">Edit Profile</h2>
           <form name="edit-profile" class="modal__form">
             <label for="profile-name-input" class="modal__label">
-              name
+              Name
               <input
                 id="profile-name-input"
                 type="text"
                 class="modal__input"
-                placeholder="Name"
+                placeholder="Type your name"
               />
             </label>
             <label for="profile-description-input" class="modal__label">
@@ -76,7 +76,7 @@
                 id="profile-description-input"
                 type="text"
                 class="modal__input"
-                placeholder="Description"
+                placeholder="Describe yourself"
               />
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
