--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
           <ul class="cards__list">
             <template id="card-template">
               <li class="card">
-                <img src="" alt="" class="card__image" />
+                <button class="card__delete-button" type="button"></button>
+                <img src="#" alt="" class="card__image" />
                 <div class="card__content">
                   <h2 class="card__title"></h2>
                   <button type="button" class="card__like-btn"></button>
@@ -82,6 +83,53 @@
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
+      </div>
+      <div class="modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn">
+            <img
+              src="./images/Group27.svg"
+              alt="x-icon"
+              class="modal__x-icon"
+            />
+          </button>
+          <h2 class="modal__title">New Post</h2>
+          <form name="edit-profile" class="modal__form">
+            <label for="card-image-input" class="modal__label">
+              Image Link
+              <input
+                id="card-image-input"
+                type="url"
+                class="modal__input"
+                placeholder="Paste a link to the picture"
+              />
+            </label>
+            <label for="card-caption-input" class="modal__label">
+              Caption
+              <input
+                id="card-caption-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your caption"
+              />
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal" id="preview-modal">
+      <div class="modal__image-container">
+        <button type="button" class="modal__close-btn">
+          <img src="./images/Group27.svg" alt="x-icon" class="modal__x-icon" />
+        </button>
+        <img
+          src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/7-photo-by-griffin-wooldridge-from-pexels.jpg"
+          alt=""
+          class="modal__image"
+        />
+        <p class="modal__caption">Golden Gate Bridge</p>
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
