--- a/index.html
+++ b/index.html
@@ -53,13 +53,7 @@
       </footer>
       <div class="modal" id="edit-modal">
         <div class="modal__container">
-          <button type="button" class="modal__close-btn">
-            <img
-              src="./images/Group27.svg"
-              alt="x-icon"
-              class="modal__x-icon"
-            />
-          </button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit Profile</h2>
           <form name="edit-profile" class="modal__form">
             <label for="profile-name-input" class="modal__label">
@@ -84,15 +78,9 @@
           </form>
         </div>
       </div>
-      <div class="modal">
+      <div class="modal" id="new-post">
         <div class="modal__container">
-          <button type="button" class="modal__close-btn">
-            <img
-              src="./images/Group27.svg"
-              alt="x-icon"
-              class="modal__x-icon"
-            />
-          </button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New Post</h2>
           <form name="edit-profile" class="modal__form">
             <label for="card-image-input" class="modal__label">
@@ -119,17 +107,15 @@
       </div>
     </div>
 
-    <div class="modal" id="preview-modal">
+    <div class="modal modal_type_preview" id="preview-modal">
       <div class="modal__image-container">
-        <button type="button" class="modal__close-btn">
-          <img src="./images/Group27.svg" alt="x-icon" class="modal__x-icon" />
-        </button>
-        <img
-          src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/7-photo-by-griffin-wooldridge-from-pexels.jpg"
-          alt=""
-          class="modal__image"
-        />
-        <p class="modal__caption">Golden Gate Bridge</p>
+        <button
+          aria-label="Close modal"
+          type="button"
+          class="modal__close-btn modal__close-btn_type_preview"
+        ></button>
+        <img src="#" alt="" class="modal__image" />
+        <p class="modal__caption"></p>
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
