--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,16 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/Logo(1).svg" alt="Spot-logo" class="header__logo" />
+        <img
+          src="<%=require('./images/Logo(1).svg')%>"
+          alt="Spot-logo"
+          class="header__logo"
+        />
       </header>
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/avatar.jpg"
+            src="<%=require('./images/avatar.jpg')%>"
             alt="Bessie Coleman"
             class="profile__avatar"
           />
@@ -25,11 +29,17 @@
             <h1 class="profile__name">Bessi Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/Group2.svg" alt="pencil-icon" />Edit Profile
+              <img
+                src="<%=require('./images/Group2.svg')%>"
+                alt="pencil-icon"
+              />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-btn">
-            <img src="./images/plus-sign-BTN.svg" alt="plus-icon" />New Post
+            <img
+              src="<%=require('./images/plus-sign-BTN.svg')%>"
+              alt="plus-icon"
+            />New Post
           </button>
         </section>
         <section class="cards page__section">
